fix same issue but on iphone

--- a/src/assets/scss/SinglePortfolioPage.module.scss
+++ b/src/assets/scss/SinglePortfolioPage.module.scss
@@ -35,6 +35,7 @@
     height: unset;
     aspect-ratio: 32/9;
     -webkit-tap-highlight-color: transparent;
+    position: relative;
 
     h2 {
       font-size: 2rem;
